<resources>
    <string name="app_name">TugasAkhir</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gambar_produk">Gambar Produk</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="jenis_produk">Jenis Produk</string>
    <string name="tipe_produk">Tipe Produk</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tersedia">Tersedia</string>
    <string name="jumlah_tersedia">Jumlah Tersedia</string>
    <string name="kg">(/kg)</string>
    <string name="harga">Harga :</string>
    <string name="harga_barang">50.000</string>
    <string name="_50kg">50Kg</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="nilai_pengguna">9,0</string>
    <string name="txt_nilai">Nilai:</string>
    <string name="pemesanan">Pemesanan:</string>
    <string name="Banyak_pemesanan">Pemesanan</string>
    <string name="tambah_keranjang">Tambah Ke Keranjang</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="image">image</string>
    <string name="ubah_produk">Ubah Produk</string>
    <string name="ulasan">Ulasan :</string>
    <string name="txt_ulasan">500</string>
    <string name="baca_ulasan">Baca Ulasan</string>
    <string name="pengguna">Pengguna</string>
    <string name="isi_pesan">Isi Pesan ...</string>
    <string name="icon_profil">Icon Profil</string>
    <string name="status_order">Status Order :</string>
    <string name="Tanggal">Tanggal :</string>
    <string name="Nomor">Nomor Orderan :</string>
    <string name="no_orderan">1329012930</string>
    <string name="statusorder">Selesai</string>
    <string name="tanggal_order">01-April-2025</string>
    <string name="waktu">19.00 WITA</string>
    <string name="waktu_order">Waktu :</string>
    <string name="tambah_produk_baru">Tambah Produk Baru</string>
    <string name="pesan_kepada_penjual">Pesan Kepada Penjual :</string>
    <string name="pembeli">Pembeli</string>
    <string name="proses_pesanan">Proses Pesanan</string>
    <string name="batalkan_proses_pesanan">Batalkan Proses Pesanan</string>
    <string name="menawarkan_harga">Menawarkan Harga :</string>
    <string name="harga_tawaran">Rp. 200.000</string>
    <string name="tolak_tawaran_harga">Tolak Tawaran Harga</string>
    <string name="metode_pembayaran">Metode Pembayaran :</string>
    <string name="Bahasa">Bahasa</string>
    <string name="no_handphone">No Handphone</string>
    <string name="tema">Tema</string>
    <string name="allorder">All Orders</string>
    <string name="Kondisi_Produk">Kondisi Produk</string>
    <string name="Simpan">Simpan Produk</string>
</resources>