<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart.KeranjangPesananActivity">

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kirim_pesan"
        android:id="@+id/btn_kirim_pesan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:cornerRadius="16dp"
        android:backgroundTint="@color/dark_grey"
        android:textColor="@color/black" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_kirim_pesan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/divider_1" />

    <RelativeLayout
        android:id="@+id/orderan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_1" >
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/nomor"
        android:text="@string/Nomor"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textStyle="bold" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nomor_order"
            android:layout_centerVertical="true"
            android:text="@string/no_orderan"
            android:layout_toEndOf="@+id/nomor"
            android:layout_marginStart="3dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rv_statusorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderan" >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/status"
            android:text="@string/status_order"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_order"
            android:layout_centerVertical="true"
            android:text="@string/statusorder"
            android:layout_toEndOf="@+id/status"
            android:layout_marginStart="3dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_tanggal_waktu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_statusorder" >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/tanggal"
            android:text="@string/Tanggal"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tanggal_order"
            android:layout_centerVertical="true"
            android:text="@string/tanggal_order"
            android:layout_toEndOf="@+id/tanggal"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waktu_order"
            android:layout_centerVertical="true"
            android:text="@string/waktu_order"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/tanggal_order"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_time"
            android:layout_centerVertical="true"
            android:text="@string/waktu"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@+id/waktu_order"
            />
    </RelativeLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rv_tanggal_waktu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/divider_2" />

  </RelativeLayout>